Wed Aug  6 01:16:47 2014  NARUSE, Yui  <naruse@ruby-lang.org>

	* lib/uri/generic.rb (URI::Generic#path_query): remove a private method.

Wed Aug  6 01:15:47 2014  NARUSE, Yui  <naruse@ruby-lang.org>

	* lib/uri/generic.rb (URI::Generic#normalize!): use String#empty?

	* lib/uri/generic.rb (URI::Generic#path_query): optimized.

	* lib/uri/generic.rb (URI::Generic#to_s): optimized.

Wed Aug  6 00:15:10 2014  NARUSE, Yui  <naruse@ruby-lang.org>

	* lib/uri/http.rb (URI::HTTP#request_uri): optimized.
	  decrease object allocation, and ensure always create at least one new
	  object for return value.

Wed Aug  6 03:41:21 2014  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/psych/lib/psych/visitors/to_ruby.rb: backwards compatibility for
	  hashes emitted by Syck. Github #198
	* test/psych/test_hash.rb: test for change.

Tue Aug  5 19:27:59 2014  Masaki Suketa <masaki.suketa@nifty.ne.jp>

	* ext/win32ole/win32ole.c (ole_invoke): skip VariantClear when
	  argument is VT_RECORD variant.

Tue Aug  5 15:52:51 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* gems/bundled_gems: Upgrade to test-unit-3.0.0 and minitest-5.4.0.

Mon Aug  4 21:50:09 2014  Masaki Suketa <masaki.suketa@nifty.ne.jp>

	* test/win32ole/test_win32ole_record.rb: add for WIN32OLE_RECORD
	  test(need .NET Framework 3.5 to run test).

Mon Aug  4 19:49:34 2014  Masaki Suketa <masaki.suketa@nifty.ne.jp>

	* ext/win32ole/win32ole.c (ole_invoke): call rb_hash_foreach instead
	  of rb_block_call.

	* ext/win32ole/win32ole.c: add comment for rdoc of WIN32OLE_VARIANT
	  class.

Mon Aug  4 09:12:47 2014  Eric Wong  <e@80x24.org>

	* variable.c: cleanup to use rb_const_lookup
	  [Feature #10107]

	* vm_insnhelper.c: ditto

Sun Aug  3 10:55:07 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby/encoding.h (rb_check_symbol_cstr): ditto.

Sun Aug  3 10:43:08 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_insnhelper.c (vm_call_method): unusable super class should cause